@@ -15,11 +15,13 @@ import javax.validation.constraints.NotNull;
 import c10n.C10N;
 import com.bakdata.conquery.ConqueryConstants;
 import com.bakdata.conquery.apiv1.forms.Form;
+import com.bakdata.conquery.apiv1.query.ArrayConceptQuery;
 import com.bakdata.conquery.apiv1.query.CQElement;
 import com.bakdata.conquery.apiv1.query.Query;
 import com.bakdata.conquery.apiv1.query.QueryDescription;
 import com.bakdata.conquery.internationalization.ExportFormC10n;
 import com.bakdata.conquery.io.cps.CPSType;
+import com.bakdata.conquery.io.jackson.View;
 import com.bakdata.conquery.models.auth.entities.User;
 import com.bakdata.conquery.models.datasets.Dataset;
 import com.bakdata.conquery.models.execution.ManagedExecution;
@@ -27,8 +29,10 @@ import com.bakdata.conquery.models.forms.managed.ManagedForm;
 import com.bakdata.conquery.models.forms.managed.ManagedInternalForm;
 import com.bakdata.conquery.models.forms.util.Alignment;
 import com.bakdata.conquery.models.forms.util.Resolution;
+import com.bakdata.conquery.models.forms.util.ResolutionShortNames;
 import com.bakdata.conquery.models.i18n.I18n;
 import com.bakdata.conquery.models.identifiable.ids.specific.ManagedExecutionId;
+import com.bakdata.conquery.models.query.DateAggregationMode;
 import com.bakdata.conquery.models.query.ManagedQuery;
 import com.bakdata.conquery.models.query.QueryResolveContext;
 import com.bakdata.conquery.models.query.Visitable;
@@ -37,6 +41,8 @@ import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonManagedReference;
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonView;
+import com.google.common.collect.ImmutableList;
 import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
@@ -53,13 +59,19 @@ public class ExportForm extends Form {
 	@JsonIgnore
 	private ManagedQuery queryGroup;
 
-	@NotNull @Valid @JsonManagedReference
+	@NotNull
+	@Valid
+	@JsonManagedReference
 	private Mode timeMode;
-	
-	@NotNull @NotEmpty
-	private List<Resolution> resolution = List.of(Resolution.COMPLETE);
-	
-	private boolean alsoCreateCoarserSubdivisions = true;
+
+	@NotEmpty
+	private List<CQElement> features = ImmutableList.of();
+
+	@NotNull
+	@NotEmpty
+	private List<ResolutionShortNames> resolution = List.of(ResolutionShortNames.COMPLETE);
+
+	private boolean alsoCreateCoarserSubdivisions = false;
 
 	@JsonIgnore
 	private Query prerequisite;
@@ -70,6 +82,7 @@ public class ExportForm extends Form {
 	public void visit(Consumer<Visitable> visitor) {
 		visitor.accept(this);
 		timeMode.visit(visitor);
+		features.forEach(visitor);
 	}
 
 
@@ -91,18 +104,27 @@ public class ExportForm extends Form {
 	public void resolve(QueryResolveContext context) {
 		queryGroup = (ManagedQuery) context.getDatasetRegistry().getMetaRegistry().resolve(queryGroupId);
 
+
+		// Apply defaults to user concept
+		ExportForm.DefaultSelectSettable.enable(features);
+
 		timeMode.resolve(context);
 		prerequisite = queryGroup.getQuery();
 
+		List<Resolution> resolutionsFlat = resolution.stream()
+													 .flatMap(ResolutionShortNames::correspondingResolutions)
+													 .distinct()
+													 .toList();
 
-		if(isAlsoCreateCoarserSubdivisions()) {
-			if(getResolution().size() != 1) {
+
+		if (isAlsoCreateCoarserSubdivisions()) {
+			if (resolutionsFlat.size() != 1) {
 				throw new IllegalStateException("Abort Form creation, because coarser subdivision are requested and multiple resolutions are given. With 'alsoCreateCoarserSubdivisions' set to true, provide only one resolution.");
 			}
-			resolvedResolutions = getResolution().get(0).getThisAndCoarserSubdivisions();
+			resolvedResolutions = resolutionsFlat.get(0).getThisAndCoarserSubdivisions();
 		}
 		else {
-			resolvedResolutions = getResolution();
+			resolvedResolutions = resolutionsFlat;
 		}
 	}
 
